--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,13 +1,14 @@
+
 .csf-blog-l{
-   color: #ff8b14;
-   text-align: center;
-   font-family: Roboto;
-   font-size: 60px;
+	color: #ff8b14;
+	text-align: center;
+	font-family: Comic Sans MS;
+	font-size: 60px;
 }
 
 .csf-blog-s{
-   text-align: center;
-   font-family: Roboto;
-   font-size: 20px;
-   margin-top: -29px;
+	text-align: center;
+	font-family: Comic Sans MS;
+	font-size: 20px;
+	margin-top: -29px;
 }
